adust the layout to fix the overlap between content and footer

--- a/ReactDemo1/ClientApp/src/components/Layout.css
+++ b/ReactDemo1/ClientApp/src/components/Layout.css
@@ -18,3 +18,17 @@
     border: none;
     outline: none;
 }
+.sticky-wrap {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh
+}
+
+.sticky-footer {
+    margin-top: auto;
+    height: 50px;
+    text-align: left;
+    left: 1%;
+    margin-bottom: 10px
+
+}
